# Rust-Wasm-Image-Glitch

./: Cargo.toml  README.md  package-lock.json  package.json
js/: index.js
src/: area_glitch.rs  lib.rs  pixel_sort.rs
static/: index.html  styles.css
